Build: (7706fd2) NewPush

--- a/bswhatsnew.html
+++ b/bswhatsnew.html
@@ -7,13 +7,15 @@
     <meta http-equiv="Pragma" content="no-cache" />
     <meta http-equiv="Expires" content="0" />
     <title>Battle-System! Whats New?</title>
+  <script type="module" crossorigin src="/assets/whatsnew-BxTzwlQZ.js"></script>
+  <link rel="modulepreload" crossorigin href="/assets/bsConstants-cgXdYAIG.js">
+  <link rel="stylesheet" crossorigin href="/assets/whatsnew-8djTp7jz.css">
 </head>
 
 <body>
     <div id="bs-whatsnew"></div>
     <footer id="bs-whatsnew-notes">
     </footer>
-    <script type="module" src="/src/utilities/bsWhatsNew.ts"></script>
 </body>
 
 </html>
