--- a/pausescreen.html
+++ b/pausescreen.html
@@ -4,10 +4,14 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Short Rest! Pause</title>
+    <script type="module" crossorigin src="/assets/pausescreen-fIwFAMrG.js"></script>
+    <link rel="modulepreload" crossorigin href="/assets/bsConstants-cgXdYAIG.js">
+    <link rel="modulepreload" crossorigin href="/assets/blockrain.jquery-oqjB4HyU.js">
+    <link rel="stylesheet" crossorigin href="/assets/blockrain-oypb_F8l.css">
+    <link rel="stylesheet" crossorigin href="/assets/pausescreen-SbBgDPd3.css">
   </head>
   <body>
     <div id="pauseScreen"></div>
-    <script type="module" src="/src/pausescreen.ts"></script>
     <script src="./node_modules/jquery/dist/jquery.min.js"></script>
   </body>
 </html>
