--- a/index.html
+++ b/index.html
@@ -8,6 +8,6 @@
   <body id="bodyElement">
     <div id="app"></div>
     <script type="module" src="/src/main.ts"></script>
-    <script src="./node_modules/jquery/dist/jquery.min.js"></script>
+    <script src="/src/blockrain/jquery.min.js"></script>
   </body>
 </html>
