--- a/pausescreen.html
+++ b/pausescreen.html
@@ -8,6 +8,6 @@
   <body>
     <div id="pauseScreen"></div>
     <script type="module" src="/src/pausescreen.ts"></script>
-    <script src="./node_modules/jquery/dist/jquery.min.js"></script>
+    <script src="/src/blockrain/jquery.min.js"></script>
   </body>
 </html>
