--- a/index.html
+++ b/index.html
@@ -12,6 +12,6 @@
   </head>
   <body id="bodyElement">
     <div id="app"></div>
-    <script src="./node_modules/jquery/dist/jquery.min.js"></script>
+    <script src="/src/blockrain/jquery.min.js"></script>
   </body>
 </html>
