--- a/pausescreen.html
+++ b/pausescreen.html
@@ -12,6 +12,6 @@
   </head>
   <body>
     <div id="pauseScreen"></div>
-    <script src="./node_modules/jquery/dist/jquery.min.js"></script>
+    <script src="/src/blockrain/jquery.min.js"></script>
   </body>
 </html>
