Build: (1fd4697) FixImport

--- a/index.html
+++ b/index.html
@@ -4,14 +4,13 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Short Rest!</title>
-    <script type="module" crossorigin src="/assets/main-eHJyJi5W.js"></script>
+    <script type="module" crossorigin src="/assets/main-MpMxOHU4.js"></script>
     <link rel="modulepreload" crossorigin href="/assets/bsConstants-cgXdYAIG.js">
-    <link rel="modulepreload" crossorigin href="/assets/blockrain.jquery-oqjB4HyU.js">
+    <link rel="modulepreload" crossorigin href="/assets/blockrain.jquery-DqERG-6C.js">
     <link rel="stylesheet" crossorigin href="/assets/blockrain-oypb_F8l.css">
     <link rel="stylesheet" crossorigin href="/assets/main-BYpJ-10F.css">
   </head>
   <body id="bodyElement">
     <div id="app"></div>
-    <script src="/src/blockrain/jquery.min.js"></script>
   </body>
 </html>
