--- a/pausescreen.html
+++ b/pausescreen.html
@@ -4,14 +4,13 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Short Rest! Pause</title>
-    <script type="module" crossorigin src="/assets/pausescreen-fIwFAMrG.js"></script>
+    <script type="module" crossorigin src="/assets/pausescreen-wY4hZKZU.js"></script>
     <link rel="modulepreload" crossorigin href="/assets/bsConstants-cgXdYAIG.js">
-    <link rel="modulepreload" crossorigin href="/assets/blockrain.jquery-oqjB4HyU.js">
+    <link rel="modulepreload" crossorigin href="/assets/blockrain.jquery-DqERG-6C.js">
     <link rel="stylesheet" crossorigin href="/assets/blockrain-oypb_F8l.css">
     <link rel="stylesheet" crossorigin href="/assets/pausescreen-SbBgDPd3.css">
   </head>
   <body>
     <div id="pauseScreen"></div>
-    <script src="/src/blockrain/jquery.min.js"></script>
   </body>
 </html>
