--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Short Rest!</title>
-    <script type="module" crossorigin src="/assets/main-MpMxOHU4.js"></script>
+    <script type="module" crossorigin src="/assets/main-DlFuCRPy.js"></script>
     <link rel="modulepreload" crossorigin href="/assets/bsConstants-cgXdYAIG.js">
     <link rel="modulepreload" crossorigin href="/assets/blockrain.jquery-DqERG-6C.js">
     <link rel="stylesheet" crossorigin href="/assets/blockrain-oypb_F8l.css">
