--- a/index.html
+++ b/index.html
@@ -4,8 +4,8 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Short Rest!</title>
-    <script type="module" crossorigin src="/assets/main-Gv9fiMdU.js"></script>
-    <link rel="modulepreload" crossorigin href="/assets/bsConstants-cgXdYAIG.js">
+    <script type="module" crossorigin src="/assets/main-C3jlapaX.js"></script>
+    <link rel="modulepreload" crossorigin href="/assets/bsConstants-CIv9LX59.js">
     <link rel="modulepreload" crossorigin href="/assets/blockrain.jquery-DqERG-6C.js">
     <link rel="stylesheet" crossorigin href="/assets/blockrain-oypb_F8l.css">
     <link rel="stylesheet" crossorigin href="/assets/main-Dm7XF_2_.css">
