--- a/index.html
+++ b/index.html
@@ -4,9 +4,9 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Short Rest!</title>
-    <script type="module" crossorigin src="/assets/main-DdK0zYBB.js"></script>
-    <link rel="modulepreload" crossorigin href="/assets/bsConstants-CIv9LX59.js">
-    <link rel="modulepreload" crossorigin href="/assets/blockrain.jquery-DqERG-6C.js">
+    <script type="module" crossorigin src="/assets/main-8Jnb5BdB.js"></script>
+    <link rel="modulepreload" crossorigin href="/assets/bsConstants-DXOcgBzX.js">
+    <link rel="modulepreload" crossorigin href="/assets/blockrain.jquery-C9-467bX.js">
     <link rel="stylesheet" crossorigin href="/assets/blockrain-oypb_F8l.css">
     <link rel="stylesheet" crossorigin href="/assets/main-B6hkddC3.css">
   </head>
