--- a/pausescreen.html
+++ b/pausescreen.html
@@ -4,9 +4,9 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Short Rest! Pause</title>
-    <script type="module" crossorigin src="/assets/pausescreen-DfSiF4AG.js"></script>
-    <link rel="modulepreload" crossorigin href="/assets/bsConstants-CIv9LX59.js">
-    <link rel="modulepreload" crossorigin href="/assets/blockrain.jquery-DqERG-6C.js">
+    <script type="module" crossorigin src="/assets/pausescreen-CIN1OgU6.js"></script>
+    <link rel="modulepreload" crossorigin href="/assets/bsConstants-DXOcgBzX.js">
+    <link rel="modulepreload" crossorigin href="/assets/blockrain.jquery-C9-467bX.js">
     <link rel="stylesheet" crossorigin href="/assets/blockrain-oypb_F8l.css">
     <link rel="stylesheet" crossorigin href="/assets/pausescreen-SbBgDPd3.css">
   </head>
