--- a/pausescreen.html
+++ b/pausescreen.html
@@ -4,11 +4,11 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Short Rest! Pause</title>
-    <script type="module" crossorigin src="/assets/pausescreen-CIN1OgU6.js"></script>
-    <link rel="modulepreload" crossorigin href="/assets/bsConstants-DXOcgBzX.js">
-    <link rel="modulepreload" crossorigin href="/assets/blockrain.jquery-C9-467bX.js">
+    <script type="module" crossorigin src="/assets/pausescreen-BewgBG64.js"></script>
+    <link rel="modulepreload" crossorigin href="/assets/bsConstants-DkgTi0D1.js">
+    <link rel="modulepreload" crossorigin href="/assets/blockrain.jquery-2qJd7CXZ.js">
     <link rel="stylesheet" crossorigin href="/assets/blockrain-oypb_F8l.css">
-    <link rel="stylesheet" crossorigin href="/assets/pausescreen-SbBgDPd3.css">
+    <link rel="stylesheet" crossorigin href="/assets/pausescreen-B9ahoYfe.css">
   </head>
   <body>
     <div id="pauseScreen"></div>
