--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <body id="bodyElement">
     <div id="app">
         <div class="header">Short Rest!</div>
-        <div id="whatsNew"></div>
+        <div id="patreonContainer"></div>
         <table>
             <tr>
                 <td>
