Build: (e2df821) update: patreon

--- a/index.html
+++ b/index.html
@@ -5,17 +5,16 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Short Rest!</title>
-  <script type="module" crossorigin src="/assets/main-Bc9UQ8QK.js"></script>
-  <link rel="modulepreload" crossorigin href="/assets/bsConstants-DkgTi0D1.js">
-  <link rel="modulepreload" crossorigin href="/assets/blockrain.jquery-2qJd7CXZ.js">
-  <link rel="stylesheet" crossorigin href="/assets/blockrain-oypb_F8l.css">
-  <link rel="stylesheet" crossorigin href="/assets/main-Cx6B126Y.css">
+  <script type="module" crossorigin src="/assets/main-BEP-cakw.js"></script>
+  <link rel="modulepreload" crossorigin href="/assets/bsConstants-DphT7H9z.js">
+  <link rel="stylesheet" crossorigin href="/assets/bsConstants-oypb_F8l.css">
+  <link rel="stylesheet" crossorigin href="/assets/main-Cd6jWHXg.css">
 </head>
 
 <body id="bodyElement">
     <div id="app">
         <div class="header">Short Rest!</div>
-        <div id="whatsNew"></div>
+        <div id="patreonContainer"></div>
         <table>
             <tr>
                 <td>
