--- a/index.html
+++ b/index.html
@@ -5,9 +5,9 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Short Rest!</title>
-  <script type="module" crossorigin src="/assets/main-BEP-cakw.js"></script>
-  <link rel="modulepreload" crossorigin href="/assets/bsConstants-DphT7H9z.js">
-  <link rel="stylesheet" crossorigin href="/assets/bsConstants-oypb_F8l.css">
+  <script type="module" crossorigin src="/assets/main-Do1Zxm4J.js"></script>
+  <link rel="modulepreload" crossorigin href="/assets/bsWorldTime-uy-e-eiY.js">
+  <link rel="stylesheet" crossorigin href="/assets/bsWorldTime-oypb_F8l.css">
   <link rel="stylesheet" crossorigin href="/assets/main-Cd6jWHXg.css">
 </head>
 
