fix: undefined timer

--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
                     <div class="wrapper">
                         <label for="breakLength">Break Timer (Mins):</label>
                         <div id="timeWrapper">
-                            <input type="number" id="breakLength" name="breakLength" maxlength="2" min="0">
+                            <input type="number" id="breakLength" name="breakLength" maxlength="2" min="0" value="0">
                             <div id="breakTimer">--:--</div>
                         </div>
                     </div>
