Build: (49ef017) fix: undefined timer

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Short Rest!</title>
-  <script type="module" crossorigin src="/assets/main-Do1Zxm4J.js"></script>
+  <script type="module" crossorigin src="/assets/main-DXo0melW.js"></script>
   <link rel="modulepreload" crossorigin href="/assets/bsWorldTime-uy-e-eiY.js">
   <link rel="stylesheet" crossorigin href="/assets/bsWorldTime-oypb_F8l.css">
   <link rel="stylesheet" crossorigin href="/assets/main-Cd6jWHXg.css">
@@ -29,7 +29,7 @@
                     <div class="wrapper">
                         <label for="breakLength">Break Timer (Mins):</label>
                         <div id="timeWrapper">
-                            <input type="number" id="breakLength" name="breakLength" maxlength="2" min="0">
+                            <input type="number" id="breakLength" name="breakLength" maxlength="2" min="0" value="0">
                             <div id="breakTimer">--:--</div>
                         </div>
                     </div>
